Code & File Cleanup
Removed unnecessary image files in repo. Minor tweak in code for readability.

--- a/SVD_001.ipynb
+++ b/SVD_001.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "plt.rcParams['figure.figsize'] = [16, 8]\n",
     "\n",
     "# Read the DICOM file\n",
-    "dicom_file = pydicom.dcmread('03-0001-000001.dcm')\n",
+    "dicom_file = pydicom.dcmread('sample_fmri_image.dcm')\n",
     "A = dicom_file.pixel_array\n",
     "\n",
     "# Convert to grayscale if necessary\n",
