Update execution counts and add image size output in SVD_001.ipynb

--- a/SVD_001.ipynb
+++ b/SVD_001.ipynb
@@ -135,7 +135,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of approx_image_r_5.png: 166957 bytes\n",
+      "Size of approx_image_r_20.png: 186320 bytes\n",
+      "Size of approx_image_r_100.png: 234826 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Save the images with different r values\n",
+    "for r in (5, 20, 100):\n",
+    "    Xapprox = U[:, :r] @ S[0:r, :r] @ VT[:r, :]\n",
+    "    plt.figure()\n",
+    "    img = plt.imshow(Xapprox)\n",
+    "    img.set_cmap('gray')\n",
+    "    plt.axis('off')\n",
+    "    plt.title('r = ' + str(r))\n",
+    "    filename = f'approx_image_r_{r}.png'\n",
+    "    plt.savefig(filename, bbox_inches='tight', pad_inches=0)\n",
+    "    plt.close()\n",
+    "    print(f'Size of {filename}: {os.path.getsize(filename)} bytes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
