--- a/SVD_001.ipynb
+++ b/SVD_001.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,8 @@
     }
    ],
    "source": [
-    "    fig, ax1 = plt.subplots()\n",
+    "r_values\n",
+    "fig, ax1 = plt.subplots()\n",
     "\n",
     "    color = 'tab:blue'\n",
     "    ax1.set_xlabel('r')\n",
